<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:orientation="vertical" >

    <RelativeLayout style="@style/TitleBar" >

        <ImageButton
            android:id="@+id/homeButton"
            style="@style/TitleBarAction"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/home_string"
            android:onClick="goHome"
            android:padding="5dip"
            android:src="@drawable/title_home_default" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:layout_toRightOf="@+id/homeButton"
            android:paddingLeft="2dp" />
        
        <ImageButton
            android:id="@+id/btnDisplay"
            style="@style/TitleBarAction"
            android:layout_toLeftOf="@+id/btnOne"
            android:contentDescription="@string/home_string"
            android:onClick="buttonDisplayClick"
            android:padding="5dip"
            android:paddingRight="2dp"
            android:src="@drawable/chart_icon" />

        <ImageButton
            android:id="@+id/btnOne"
            style="@style/TitleBarAction"
            android:layout_toLeftOf="@+id/btnTwo"
            android:contentDescription="@string/home_string"
            android:onClick="buttonOneClick"
            android:padding="5dip"
            android:paddingRight="2dp"
            android:src="@drawable/chart_play" />

        <ImageButton
            android:id="@+id/btnTwo"
            style="@style/TitleBarAction"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/home_string"
            android:onClick="buttonTwoClick"
            android:padding="5dip"
            android:src="@drawable/chart_pause" />
    </RelativeLayout>

    <com.rAtTrax.AndroUI.GaugeBuilder
        android:id="@+id/analogGauge"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_margin="2dp" />

    <TextView
        android:id="@+id/txtViewDigital"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:text="@string/test_text"
        android:textSize="80sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/txtViewVoltsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/txtViewVolts"
            android:gravity="left"
            android:text="@string/volts"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/txtViewVolts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:gravity="center_horizontal"
            android:text="@string/test_text"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/TextViewGPSspeed"
            android:layout_width="483dp"
            android:layout_height="171dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/GPS_Speed_title"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textViewGS1"
            android:layout_width="297dp"
            android:layout_height="161dp"
            android:layout_alignParentRight="true"
            android:elegantTextHeight="false"
            android:fontFamily="sans-serif-black"
            android:foregroundGravity="right"
            android:gravity="right"
            android:text="0.0"
            android:textAlignment="inherit"
            android:textAllCaps="true"
            android:textSize="50sp" />
    </RelativeLayout>

</LinearLayout>