<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:atswidget="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:configChanges="orientation"
    android:screenOrientation="landscape">

    <RelativeLayout style="@style/TitleBarVertical">

        <ImageButton
            android:id="@+id/btnTwo"
            style="@style/TitleBarActionVertical"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/max_button"
            android:onClick="buttonTwoClick"
            android:padding="5dip"
            android:src="@drawable/chart_pause" />

        <ImageButton
            android:id="@+id/btnOne"
            style="@style/TitleBarActionVertical"
            android:layout_below="@+id/btnTwo"
            android:contentDescription="@string/reset_button"
            android:onClick="buttonOneClick"
            android:padding="5dip"
            android:paddingTop="2dp"
            android:src="@drawable/chart_play" />

        <ImageButton
            android:id="@+id/btnDisplay"
            style="@style/TitleBarActionVertical"
            android:layout_below="@+id/btnOne"
            android:contentDescription="@string/home_string"
            android:onClick="buttonDisplayClick"
            android:padding="5dip"
            android:paddingRight="2dp"
            android:src="@drawable/chart_icon" />

        <ImageView
            android:id="@+id/titleBarSeparator"
            style="@style/TitleBarSeparatorVertical"
            android:layout_above="@+id/homeButton"
            android:contentDescription="@string/reset_button"
            android:paddingBottom="2dp" />

        <ImageButton
            android:id="@+id/homeButton"
            style="@style/TitleBarActionVertical"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/home_string"
            android:onClick="goHome"
            android:padding="5dip"
            android:src="@drawable/title_home_default" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="696dp"
        android:layout_height="756dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="641dp"
            android:layout_height="167dp"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="1.0dip"
            android:paddingTop="1.0dip"
            android:paddingRight="1.0dip"
            android:paddingBottom="1.0dip">

            <com.rAtTrax.AndroUI.GaugeBuilder
                android:id="@+id/analogGauge"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="1" />

            <com.rAtTrax.AndroUI.GaugeBuilder
                android:id="@+id/analogGauge2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="1" />

            <com.rAtTrax.AndroUI.GaugeBuilder
                android:id="@+id/analogGauge3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="1" />

            <com.rAtTrax.AndroUI.GaugeBuilder
                android:id="@+id/analogGauge4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="640dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingLeft="1.0dip"
            android:paddingTop="1.0dip"
            android:paddingRight="1.0dip"
            android:paddingBottom="1.0dip">

            <TextView
                android:id="@+id/txtViewDigital"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/txtViewDigital2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/txtViewDigital3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/txtViewDigital4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="45sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="640dp"
            android:layout_height="167dp"
            android:layout_gravity="left"
            android:baselineAligned="false"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="1.0dip"
            android:paddingTop="1.0dip"
            android:paddingRight="1.0dip"
            android:paddingBottom="1.0dip">

            <com.rAtTrax.AndroUI.GaugeBuilder
                android:id="@+id/EGT1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.rAtTrax.AndroUI.GaugeBuilder
                android:id="@+id/EGT2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.rAtTrax.AndroUI.GaugeBuilder
                android:id="@+id/EGT3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.rAtTrax.AndroUI.GaugeBuilder
                android:id="@+id/EGT4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="640dp"
            android:layout_height="59dp"
            android:layout_gravity="bottom"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingLeft="1.0dip"
            android:paddingTop="1.0dip"
            android:paddingRight="1.0dip"
            android:paddingBottom="1.0dip">


            <TextView
                android:id="@+id/txtViewDigital5"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/txtViewDigital6"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/txtViewDigital7"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/txtViewDigital8"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="45sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="640dp"
            android:layout_height="167dp"
            android:orientation="horizontal"
            android:paddingLeft="1.0dip"
            android:paddingTop="1.0dip"
            android:paddingRight="1.0dip"
            android:paddingBottom="1.0dip">

            <com.rAtTrax.AndroUI.GaugeBuilder
                android:id="@+id/EGT5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.rAtTrax.AndroUI.GaugeBuilder
                android:id="@+id/EGT6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.rAtTrax.AndroUI.GaugeBuilder
                android:id="@+id/EGT7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.rAtTrax.AndroUI.GaugeBuilder
                android:id="@+id/EGT8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="640dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingLeft="1.0dip"
            android:paddingTop="1.0dip"
            android:paddingRight="1.0dip"
            android:paddingBottom="1.0dip">

            <TextView
                android:id="@+id/txtViewDigital9"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"

                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/txtViewDigital10"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"

                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/txtViewDigital11"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"

                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/txtViewDigital12"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"

                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="45sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="189dp"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtViewVoltsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/txtViewVolts"
                android:gravity="left"
                android:text="@string/volts"
                android:textSize="35sp" />

            <Space
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtViewVolts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:gravity="left"
                android:text="@string/test_text"
                android:textSize="35sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="727dp"
        android:orientation="vertical">

        <com.rAtTrax.AndroUI.GaugeBuilder
            android:id="@+id/RPM"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.rAtTrax.AndroUI.GaugeBuilder
            android:id="@+id/SPEED"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</LinearLayout>